--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,23 +6,27 @@ name = "rust-embedded-experiments"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.6.0"
+cortex-m = "0.6.3"
 cortex-m-rt = "0.6.10"
 cortex-m-semihosting = "0.3.3"
 panic-halt = "0.2.0"
 
 # Uncomment for the panic example.
-# panic-itm = "0.4.1"
+panic-itm = "0.4.1"
 
 # Uncomment for the allocator example.
-# alloc-cortex-m = "0.3.5"
+alloc-cortex-m = "0.4.0"
 
 # Uncomment for the device example.
 # Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
 # and then use `cargo build --examples device` to build it.
-# [dependencies.stm32f3]
-# features = ["stm32f303", "rt"]
-# version = "0.7.1"
+[dependencies.stm32f1]
+features = ["stm32f103", "rt"]
+version = "0.12.1"
+
+[dependencies.stm32f1xx-hal]
+version = "0.7.0"
+features = ["rt", "stm32f103", "medium"]
 
 # this lets you use `cargo fix`!
 [[bin]]
