--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,20 @@
 [package]
-authors = ["jslupicki <jan@slupicki.com>"]
-edition = "2018"
-readme = "README.md"
-name = "rust-embedded-experiments"
+name = "app"
+categories = ["embedded", "no-std"]
+authors = ["arrowcircle", "Emil Fresk <emil.fresk@gmail.com>"]
+description = "Example blinky for BluePill"
+keywords = ["arm", "cortex-m"]
+license = "MIT OR Apache-2.0"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
-cortex-m = "0.6.3"
-cortex-m-rt = "0.6.10"
-cortex-m-semihosting = "0.3.3"
-panic-halt = "0.2.0"
-
-# Uncomment for the panic example.
-panic-itm = "0.4.1"
-
-# Uncomment for the allocator example.
-alloc-cortex-m = "0.4.0"
-
-# Uncomment for the device example.
-# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
-# and then use `cargo build --examples device` to build it.
-[dependencies.stm32f1]
-features = ["stm32f103", "rt"]
-version = "0.12.1"
+panic-halt = "0.2"
+panic-abort = "0.3.2"
+panic-semihosting = "0.5"
+cortex-m-semihosting = "0.3.5"
+embedded-hal = "0.2.4"
+cortex-m-rtic = "0.5.5"
 
 [dependencies.stm32f1xx-hal]
 version = "0.7.0"
@@ -30,11 +22,18 @@ features = ["rt", "stm32f103", "medium"]
 
 # this lets you use `cargo fix`!
 [[bin]]
-name = "rust-embedded-experiments"
+name = "app"
 test = false
 bench = false
 
+[profile.dev]
+opt-level = 1
+codegen-units = 16
+debug = true
+lto = false
+
 [profile.release]
-codegen-units = 1 # better optimizations
-debug = true # symbols are nice and they don't increase the size on Flash
-lto = true # better optimizations
+opt-level = "s"     # optimize for size
+codegen-units = 1   # better optimizations
+debug = true        # symbols are nice and they don't increase the size on Flash
+lto = true          # better optimizations
