--- a/openocd.cfg
+++ b/openocd.cfg
@@ -4,9 +4,22 @@
 # interfaces. At any time only one interface should be commented out.
 
 # Revision C (newer revision)
-source [find interface/stlink-v2-1.cfg]
+# source [find interface/stlink-v2-1.cfg]
 
 # Revision A and B (older revisions)
-# source [find interface/stlink-v2.cfg]
+#source [find interface/stlink-v2.cfg]
+
+#source [find interface/stlink.cfg]
+
+# For new version of openOCD
+# source [find interface/stlink.cfg]
+
+#source [find target/stm32f1x.cfg]
+
+source [find interface/stlink.cfg]
+
+transport select hla_swd
 
 source [find target/stm32f1x.cfg]
+
+reset_config srst_only 
