--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 panic-halt = "0.2"
 panic-abort = "0.3.2"
 panic-semihosting = "0.5"
-cortex-m-semihosting = "0.3.5"
+cortex-m-semihosting = { version = "0.3.5", optional = true }
 embedded-hal = "0.2.4"
 cortex-m-rtic = "0.5.5"
 
@@ -37,3 +37,6 @@ opt-level = "s"     # optimize for size
 codegen-units = 1   # better optimizations
 debug = true        # symbols are nice and they don't increase the size on Flash
 lto = true          # better optimizations
+
+[features]
+semihosting = ["cortex-m-semihosting"]
